<resources>
    <string name="app_name">Handball Statistik</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Zur Test Activity</string>
    <string name="testdatenEinspielen">Testdaten einspielen</string>

    <!-- General Buttons and Texts -->
    <string name="saveButton">Speichern</string>
    <string name="cancelButton">Abbrechen</string>
    <string name="closeButton">Schließen</string>

    <!-- Pop-Ups in Main Activity -->
    <string name="addPlayerFirstname">Vorname</string>
    <string name="addPlayerLastname">Nachname</string>
    <string name="addPlayerNumber">Nummer (Zahl!)</string>
    <string name="addPlayerGoalie">Torwart?</string>
    <string name="deleteTeam">Mannschaft löschen?</string>
    <string name="deletePlayer">Spieler löschen?</string>
    <string name="deleteGame">Spiel löschen?</string>
    <string name="setGameActive">Spiel wieder aktivieren?</string>
    <string name="deletePositiveButton">Jawohl</string>
    <string name="deleteNegativeButton">Ne</string>
    <string name="newGameTitle">Spiel anlegen</string>
    <string name="newGameMessage">Leg ein neues Spiel an</string>
    <string name="newTeamTitle">Mannschaft anlegen</string>
    <string name="newTeamMessage">Leg eine neue Mannschaft an</string>
    <string name="newTeamHintLong">Längerer Titel (z.B. ESV Dresden 1. Herren)</string>
    <string name="newTeamHintShort">Kurztitel (z.B. esv_vlm)</string>
    <string name="newTeamHintDescription">Beschreibung (Optional)</string>
    <string name="spinnerTeamColorLabel">Trikotfarbe:</string>
    <string name="spinnerTeamGoalieColorLabel">Trikotfarbe Torwart:</string>
    <string name="newPlayerTitle">Spieler anlegen</string>
    <string name="newPlayerMessage">Leg einen neuen Spieler an</string>

    <!-- Stats Fragment -->
    <string name="buttonTeamStatsTitle">Teams</string>
    <string name="buttonPlayerStatsTitle">Spieler</string>
    <string name="statsForLabel">Statistiken</string>
    <string name="exportLabel">Export</string>

    <!-- About Fragment -->
    <string name="aboutInfoBeta">Diese App befindet sich noch im Beta Status! Bitte kontaktieren Sie mich wegen auftretender Fehler oder Vorschlägen</string>
    <string name="aboutImpressumTitle">Impressum</string>
    <string name="aboutImpressumText">Hendrik Thüs\nPoststraße\n01159 Dresden</string>
    <string name="aboutContactDeveloper">Entwickler kontaktieren</string>

    <!-- Player Activity-->
    <string name="saveEditedPlayer">Speichern</string>
    <string name="pictureDummy">Bild Platzhalter</string>

    <!-- Player Fragment-->
    <string name="playerFragmentNoPlayer">Du hast noch keine Spieler angelegt!\nFang am besten damit an, danach würde ich Mannschaften anlegen ;)</string>

    <!-- Game Activity -->
    <string name="updatePlayerInGame">Spieler bearbeiten</string>
    <string name="updatePlayerInGameTitle">Spieler bearbeiten</string>
    <string name="updatePlayerInGameMessage">Bearbeite die teilnehmenden Spieler</string>
    <string name="addActionTitle">Neues Ereignis</string>
    <string name="deleteActionTitle">Ereignis entfernen</string>

    <!-- Game Fragment -->
    <string name="gameFagmentNoGame">Du hast noch keine Spiele angelegt!\nBevor du dies tust, solltest du folgende Dinge erledigen:\n
        1. Spieler anlegen\n2. Mannschaften anlegen\n3. Den Mannschaften Spieler zuordnen</string>

    <!-- Team Activity -->
    <string name="addPlayerTitle">Spieler hinzufügen</string>
    <string name="addPlayerMessage">Welche Spieler gehören noch zu diesem Team?</string>
    <string name="menuTeamEdit">Team bearbeiten</string>

    <!-- Team Fragment -->
    <string name="teamFragmentNoTeams">Du hast noch keine Mannschaften angelegt!\nBevor du damit loslegst, solltest du am besten ein paar Spieler anlegen</string>

    <!-- PlayerStats Activity -->
    <string name="playerStatsTitle">Spieler Statistiken</string>


    <string name="statsTitle">Statisik</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Spiele</item>
        <item>Teams</item>
        <item>Spieler</item>
        <item>Ereignisse</item>
        <item>Auswertung</item>
        <item>Benutzer</item>
        <item>Hilfe und Kontakt</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_spiel">SpielActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="menuGameIsFinished">Spiel beenden</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="addPlayer">Spieler hinzufügen</string>
    <string name="buttonExportCSV">CSV</string>
    <string name="dbFormat">Datenbank formatieren</string>
    <string name="title_activity_player_stats">PlayerStatsActivity</string>
    <string name="toggleFiltersTeamStats">+ Filter</string>
    <string name="untoggleFiltersTeamStats">- Filter</string>
    <string name="editTextUsername">Name des Benutzerkontos</string>
    <string name="editTextAccountname">Eigene Bezeichnung</string>
    <string name="editTextPassword">Passwort</string>


</resources>
