<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hight.ht.sportstatistik.activities.UserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsername"
            android:padding="10dp"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:layout_marginTop="50px"
            android:gravity="center"
            android:hint="@string/editTextUsername"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAccountname"
            android:padding="10dp"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:layout_marginTop="50px"
            android:gravity="center"
            android:hint="@string/editTextAccountname"
            android:layout_below="@id/editTextUsername"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:padding="10dp"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:layout_marginTop="50px"
            android:gravity="center"
            android:hint="@string/editTextPassword"
            android:layout_below="@id/editTextAccountname"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:text="@string/saveButton"
            android:layout_below="@id/editTextPassword"
            android:onClick="saveUser"/>
    </RelativeLayout>

</FrameLayout>
