<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTeamLong"
        android:hint="@string/newTeamHintLong"
        android:layout_margin="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTeamShort"
        android:hint="@string/newTeamHintShort"
        android:layout_margin="5dp"
        android:layout_below="@+id/addTeamLong"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addTeamDescription"
        android:hint="@string/newTeamHintDescription"
        android:layout_margin="5dp"
        android:layout_below="@+id/addTeamShort"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llTeamColor"
        android:layout_below="@id/addTeamDescription">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTeamColorLabel"
            android:text="@string/spinnerTeamColorLabel"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_weight="1"
            android:id="@+id/spinnerTeamColor"></Spinner>
    </LinearLayout>
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llTeamGoalieColor"
        android:layout_below="@id/llTeamColor">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerTeamGoalieColorLabel"
            android:text="@string/spinnerTeamGoalieColorLabel"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_gravity="center"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/spinnerTeamGoalieColor"></Spinner>
    </LinearLayout>-->


</RelativeLayout>