<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.TeamStatsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/layoutTeamFilters">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:id="@+id/spinnerFilterTeam"
            android:text="TEST Filter" />
    </LinearLayout>
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleFiltersTeamStats"
        android:textOff="@string/toggleFiltersTeamStats"
        android:textOn="@string/untoggleFiltersTeamStats"
        android:layout_below="@id/layoutTeamFilters"
        android:clickable="true"
        android:onClick="toggleTeamFilter"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:id="@+id/expendableStatsIconAvg"
        android:layout_alignParentRight="true"
        android:layout_below="@id/toggleFiltersTeamStats"
        android:background="@drawable/average_icon"/>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:id="@+id/expendableStatsIconSum"
        android:layout_toLeftOf="@id/expendableStatsIconAvg"
        android:layout_below="@id/toggleFiltersTeamStats"
        android:background="@drawable/sum_icon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toggleFiltersTeamStats"
        android:text="@string/statsTitle"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp" />
    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/expendableStatsTeam"
        android:layout_below="@id/expendableStatsIconAvg"></ExpandableListView>

</RelativeLayout>
